# TASK-48

.tmp/: audit_report-1-fix_check.md
repo/: Cargo.toml  run_tests.sh
repo/backend/: Cargo.toml  Dockerfile
repo/backend/src/middleware/: auth_guard.rs
repo/backend/src/routes/: auth.rs  payments.rs  users.rs
repo/frontend/: Dockerfile
repo/frontend_tests/: Cargo.toml
repo/frontend_tests/src/: lib.rs
repo/unit_tests/src/: lib.rs  security.rs
