[workspace]
members = ["backend", "frontend", "unit_tests", "API_tests", "frontend_tests"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
dotenv = "0.15"
