[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
rocket_cors = "0.6"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
dotenv = { workspace = true }
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "chrono", "uuid", "rust_decimal"] }
jsonwebtoken = "9"
bcrypt = "0.15"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
sha2 = "0.10"
hex = "0.4"
slug = "0.1"
rand = "0.8"
base64 = "0.21"
zip = "0.6"
image = "0.24"
lopdf = "0.32"
imageproc = "0.23"
rusttype = "0.9"
